@@ -1,0 +1,4 @@
+This directory contains a build routine for the "Gpg4win CD".
+
+Attention: this is work in progress and thus neither optimal (in terms
+of bandwith, disk consumption and quality) nor complete.
