@@ -1,5 +1,10 @@
 2007-08-29  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
 
+	* CD, CD/README.txt, CD/Makefile: New. Initial coarse creation
+	method for a Gpg4win iso Image.
+
+2007-08-29  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
+
 	* website/website-maintenance.htm4, website/website-maintenance-de.htm4:
 	Fixed SVN URL.
 
